--- a/rotating-navigation/style.css
+++ b/rotating-navigation/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .circle {
-  background-color: #ff7979;
+  background-color: #756d6d;
   height: 200px;
   width: 200px;
   border-radius: 50%;
@@ -117,7 +117,7 @@ nav a{
 }
 
 nav a:hover {
-  color: #FF7979;
+  color: #c97a7a;
   font-weight: bold;
 }
 
